Updated to use view_time_observer js file

--- a/index.html
+++ b/index.html
@@ -40,12 +40,17 @@
             />
             <span class="timestamp" id="timestamp">00:00</span>
         </div>
+        <div id="time-watched-section" class="video-details">
+            <h2>Watch Time</h2>
+            <p id="time-watched">You have watched 0.00 seconds of this video.</p>
+        </div>
         <div id="video-description" class="video-details">
             <!-- Content will be dynamically loaded -->
           </div>
           
         <script src="script.js"></script>
         <script src="render_json_data.js"></script>
+        <script src="view_time_observers.js"></script>
     </body>
 
 </html>
